--- a/xstream/pom.xml
+++ b/xstream/pom.xml
@@ -15,17 +15,22 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.codehaus.jettison</groupId>
+			<artifactId>jettison</artifactId>
+			<version>1.3.7</version>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
-	</dependencies>
 
 	<build>
 		<plugins>
@@ -40,5 +45,7 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	</dependencies>
 
 </project>
